{
  "version": 4,
  "terraform_version": "0.12.6",
  "serial": 77,
  "lineage": "ccea2837-c10a-f9ef-3833-402cf52f4de3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0d8f15e4ff3830c66",
            "private_dns": "ip-10-0-0-74.ap-northeast-1.compute.internal",
            "public_dns": "ec2-52-194-116-52.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "52.194.116.52",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "depends_on": [
            "aws_internet_gateway.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-01a337df215507c5c",
            "domain": "vpc",
            "id": "eipalloc-0c0150b67fa243aaa",
            "network_interface": "eni-0998029db88815b2f",
            "private_dns": "ip-10-0-1-135.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.135",
            "public_dns": "ec2-13-230-228-246.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "13.230.228.246",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "depends_on": [
            "aws_internet_gateway.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0aff7434642cbf5b1",
            "domain": "vpc",
            "id": "eipalloc-0c48ba55180fc52db",
            "network_interface": "eni-05c780c7d28a01d23",
            "private_dns": "ip-10-0-2-193.ap-northeast-1.compute.internal",
            "private_ip": "10.0.2.193",
            "public_dns": "ec2-54-199-128-213.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.199.128.213",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "depends_on": [
            "aws_internet_gateway.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0406fde8c80bce27a",
            "owner_id": "212091275616",
            "vpc_id": "vpc-0135f1839a5582df5"
          },
          "depends_on": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "alb-log-pragmatic-terraform-on-aws-zin",
                "enabled": true
              }
            ],
            "enable_deletion_protection": true,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:212091275616:loadbalancer/app/example/0fc663bbe9be46f4",
            "idle_timeout": 60,
            "internal": false,
            "load_balancer_type": "application",
            "name": "example",
            "security_groups": [
              "sg-014a2b7b718f5849c",
              "sg-05e1172d74dc4e1aa",
              "sg-0ebc1cc19bc6e43a1"
            ],
            "subnets": [
              "subnet-00e1b42c45b33ea7d",
              "subnet-0a0168f0895ea92e6"
            ]
          },
          "depends_on": [
            "aws_s3_bucket.alb_log",
            "aws_subnet.public_0",
            "aws_subnet.public_1",
            "module.http_redirect_sg",
            "module.http_sg",
            "module.https_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c0150b67fa243aaa",
            "id": "nat-038d59106e0137c0a",
            "network_interface_id": "eni-0998029db88815b2f",
            "private_ip": "10.0.1.135",
            "public_ip": "13.230.228.246",
            "subnet_id": "subnet-00e1b42c45b33ea7d"
          },
          "depends_on": [
            "aws_eip.nat_gateway_0",
            "aws_internet_gateway.example",
            "aws_subnet.public_0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c48ba55180fc52db",
            "id": "nat-0cae917c6177a6284",
            "network_interface_id": "eni-05c780c7d28a01d23",
            "private_ip": "10.0.2.193",
            "public_ip": "54.199.128.213",
            "subnet_id": "subnet-0a0168f0895ea92e6"
          },
          "depends_on": [
            "aws_eip.nat_gateway_1",
            "aws_internet_gateway.example",
            "aws_subnet.public_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a55aa4ab135de6841080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-038d59106e0137c0a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a55aa4ab135de684",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_nat_gateway.nat_gateway_0",
            "aws_route_table.private_0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01eaa012786b526d01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0cae917c6177a6284",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01eaa012786b526d0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_nat_gateway.nat_gateway_1",
            "aws_route_table.private_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0406fde8c80bce27a",
            "id": "r-rtb-064ad427c7bee2f261080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-064ad427c7bee2f26",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_internet_gateway.example",
            "aws_route_table.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a55aa4ab135de684",
            "owner_id": "212091275616",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-038d59106e0137c0a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-0135f1839a5582df5"
          },
          "depends_on": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01eaa012786b526d0",
            "owner_id": "212091275616",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0cae917c6177a6284",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-0135f1839a5582df5"
          },
          "depends_on": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-064ad427c7bee2f26",
            "owner_id": "212091275616",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0406fde8c80bce27a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-0135f1839a5582df5"
          },
          "depends_on": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b598825a99a9d96",
            "route_table_id": "rtb-0a55aa4ab135de684",
            "subnet_id": "subnet-01f0f8451e56e8ddf"
          },
          "depends_on": [
            "aws_route_table.private_0",
            "aws_subnet.private_0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7f23eb6d8091dd2",
            "route_table_id": "rtb-01eaa012786b526d0",
            "subnet_id": "subnet-0132f3de800f837ed"
          },
          "depends_on": [
            "aws_route_table.private_1",
            "aws_subnet.private_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031bdbdb14335c374",
            "route_table_id": "rtb-064ad427c7bee2f26",
            "subnet_id": "subnet-00e1b42c45b33ea7d"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.public_0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd327a0dd105dc24",
            "route_table_id": "rtb-064ad427c7bee2f26",
            "subnet_id": "subnet-0a0168f0895ea92e6"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.public_1"
          ]
        }
      ]
    },
    {
      "module": "module.https_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:212091275616:security-group/sg-05e1172d74dc4e1aa",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05e1172d74dc4e1aa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "https-sg",
            "name_prefix": null,
            "owner_id": "212091275616",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0135f1839a5582df5"
          }
        }
      ]
    },
    {
      "module": "module.example_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:212091275616:security-group/sg-0cfee94d590544d24",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cfee94d590544d24",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "module-sg",
            "name_prefix": null,
            "owner_id": "212091275616",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0135f1839a5582df5"
          }
        }
      ]
    },
    {
      "module": "module.http_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:212091275616:security-group/sg-0ebc1cc19bc6e43a1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ebc1cc19bc6e43a1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "http-sg",
            "name_prefix": null,
            "owner_id": "212091275616",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0135f1839a5582df5"
          }
        }
      ]
    },
    {
      "module": "module.http_redirect_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:212091275616:security-group/sg-014a2b7b718f5849c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-014a2b7b718f5849c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "http-redirect-sg",
            "name_prefix": null,
            "owner_id": "212091275616",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0135f1839a5582df5"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:212091275616:security-group/sg-00f85947699772416",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00f85947699772416",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "example",
            "name_prefix": null,
            "owner_id": "212091275616",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0135f1839a5582df5"
          },
          "depends_on": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.https_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1416656981",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-05e1172d74dc4e1aa",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.example_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1538357142",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0cfee94d590544d24",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.http_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-452838118",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0ebc1cc19bc6e43a1",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.http_redirect_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-179895825",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-014a2b7b718f5849c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1514329917",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-00f85947699772416",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.example"
          ]
        }
      ]
    },
    {
      "module": "module.https_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-2225898357",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05e1172d74dc4e1aa",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.example_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-2780178914",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cfee94d590544d24",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.http_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-1721918363",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ebc1cc19bc6e43a1",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.http_redirect_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 8080,
            "id": "sgrule-188429723",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-014a2b7b718f5849c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-3143385937",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00f85947699772416",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:212091275616:subnet/subnet-01f0f8451e56e8ddf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.65.0/24",
            "id": "subnet-01f0f8451e56e8ddf",
            "map_public_ip_on_launch": false,
            "owner_id": "212091275616",
            "vpc_id": "vpc-0135f1839a5582df5"
          },
          "depends_on": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:212091275616:subnet/subnet-0132f3de800f837ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.66.0/24",
            "id": "subnet-0132f3de800f837ed",
            "map_public_ip_on_launch": false,
            "owner_id": "212091275616",
            "vpc_id": "vpc-0135f1839a5582df5"
          },
          "depends_on": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:212091275616:subnet/subnet-00e1b42c45b33ea7d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-00e1b42c45b33ea7d",
            "map_public_ip_on_launch": true,
            "owner_id": "212091275616",
            "vpc_id": "vpc-0135f1839a5582df5"
          },
          "depends_on": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:212091275616:subnet/subnet-0a0168f0895ea92e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0a0168f0895ea92e6",
            "map_public_ip_on_launch": true,
            "owner_id": "212091275616",
            "vpc_id": "vpc-0135f1839a5582df5"
          },
          "depends_on": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:212091275616:vpc/vpc-0135f1839a5582df5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-027175ee9073dec32",
            "default_route_table_id": "rtb-0b016c30b0972d793",
            "default_security_group_id": "sg-03e8c50acbfadd202",
            "dhcp_options_id": "dopt-d7de87b0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0135f1839a5582df5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b016c30b0972d793",
            "owner_id": "212091275616",
            "tags": {
              "Name": "example"
            }
          }
        }
      ]
    }
  ]
}